--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,10 +1,10 @@
 <footer class="footer">
-    <div class="footer__div">
+    <div class="footer__container">
         <p class="footer__text">Copyright (C) | ciarifionsupport@clarifion.com</p>
     </div>
 
-    <div class="footer__div1">
-        <img src="../../assets/imgFooter1.png" alt="imgfooter" class="footer__div1-img">
+    <div class="footer__container">
+        <img src="assets/imgFooter1.png" alt="imgfooter" class="footer__container-img">
     <p class="footer__text">Secure 256-Bit SSL Encryption.</p>
     </div>
 
