--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,18 +1,18 @@
 <header class="nabvar">
     <div class="nabvar__item">
-        <img src="../../assets/primerDiv.png" alt="ImgIcono" class="nabvar__item-icono">
+        <img src="assets/primerDiv.png" alt="ImgIcono" class="nabvar__item-icono">
         <a href="" class="nabvar__item-links">30-DAY SATISFACTION GUARANTEE</a>
     </div>
     <div class="nabvar__item">
-        <img src="../../assets/SegundoDiv.png" alt="ImgIcono" class="nabvar__item-icono">
+        <img src="assets/SegundoDiv.png" alt="ImgIcono" class="nabvar__item-icono">
         <a href="" class="nabvar__item-links">FREE DELIVERY ON ORDERS OVER $40.00</a>        
     </div>
     <div class="nabvar__item">
-        <img src="../../assets/tercerDiv.png" alt="ImgIcono" class="nabvar__item-icono">
+        <img src="assets/tercerDiv.png" alt="ImgIcono" class="nabvar__item-icono">
         <a href="" class="nabvar__item-links">50.000+ HAPPY CUSTOMERS </a>
     </div>
     <div class="nabvar__item">
-        <img src="../../assets/CuartoDiv.png" alt="ImgIcono" class="nabvar__item-icono">
+        <img src="assets/CuartoDiv.png" alt="ImgIcono" class="nabvar__item-icono">
         <a href="" class="nabvar__item-links">100% MONEY BACK GUARANTEE </a>
     </div>
   </header>
