--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -1,14 +1,17 @@
 .footer {
     background-color: #252F3D;
     width: 1097px;
-    height: 88px;
+    height: 50px;
     display: flex;
-    &__div1 {
+    justify-content: space-evenly;
+    align-items: center;
+    &__container {
         display: flex;
         &-img {
             width: 15px;
             height: 15px;
-            padding-top: 1.33px;
+            padding: 0 5px;
+            padding-top: 4px;
             padding-left: 4.17px;
             border-radius: 1.33px;
         }
@@ -18,7 +21,8 @@
         height: 12px;
         font-weight: 400;
         font-family: Manrope;
-        font-size: 16px;
+        font-size: 14px;
         line-height: 24px;
+        color: white;
     }
 }
