finalizando con el body

--- a/src/app/shared/components/body/body.component.html
+++ b/src/app/shared/components/body/body.component.html
@@ -32,43 +32,38 @@
     </div>
 </section>
 
-<section class="columnaIzquierda">
-    <div class="main2__div">
-        <img src="assets/img.png" alt="imgcenter" class="main2__div-img">
-        <div>
-            <img src="assets/imgPhoto.png" alt="imgPhoto" class="main2__div-img2">
-            <img src="assets/name.png" alt="imgName" class="main2__div-img3">
+<section class="section__conteiner">
+    <section class="leftColumn">
+        <div class="leftColumn__img">
+            <img src="assets/img.png" alt="imgcenter" class="leftColumn__img-clarifion">
+            <div>
+                <img src="assets/imgPhoto.png" alt="imgPhoto" class="leftColumn__img-photo">
+                <img src="assets/name.png" alt="imgName" class="leftColumn__img-stars">
+            </div>
+            <p class="leftColumn__img-text">"As soon as the Clarifions arrived I put one in my bedroom. This was late in the afternoon. When I went to the bedroom in the evening it smelled clean. When I went to bed I felt I could breathe better. Wonderful.”</p>
         </div>
-        <p class="main2__div-text">"As soon as the Clarifions arrived I put one in my bedroom. This was late in the afternoon. When I went to the bedroom in the evening it smelled clean. When I went to bed I felt I could breathe better. Wonderful.”</p>
-    </div>
-</section>
+    </section>
+    
+    <section class="rightColumn">
+        <div class="rightColumn__text">
+                <img src="assets/imgtext.png" alt="imgtext" class="rightColumn__text-primary">
+        </div>
 
-<section class="columnaDerecha">
-    <div class="main2__div1">
-        <div class="main2__div1-center">
-            <img src="assets/imgtext.png" alt="imgtext" class="main2__div1-center-text">
-        </div>
-        <div class="main2__div1-img">
-            <div>
-                <img src="assets/img main2.png" alt="imgCenter">
+        <div class="rightColumn__products">
+            <div class="rightColumn__products-img">
+                  <img src="assets/img main2.png" alt="imgCenter">
             </div>
-            <div>
-                <p>Clarifion Air Lonizer</p>
-                <img src="assets/$180.png" alt="imgnumber">
-                <img src="assets/$84.png" alt="imgnumber">
-            </div>
-
-        </div>
-        <div>
-            <img src="assets/imgEstrellas.png" alt="imgEstrellas">
-        </div>
-            <div>
-                <img src="assets/imgRedondo.png" alt="imgPunto">
-                <p>12 left in Stock</p>
-            </div>
-            <div>
+            <div class="rightColumn__text">
+                <img src="assets/imgprecio.png" alt="imgprice">
+                <img src="assets/imgEstrellas.png" alt="imgEstrellas">
+                <div class="rightColumn__text-secundary">
+                    <img src="assets/imgRedondo.png" alt="imgPunto" class="rightColumn__text-secundary-icon">
+                    <p>12 left in Stock</p>
+                </div>
                 <p>Simply plug a Clarifion into any standard outlet and replace bulky, expensive air purifiers with a simple.</p>
             </div>
+          
+        </div>
             <div>
                 <div>
                     <img src="" alt="">
@@ -76,12 +71,12 @@
                 </div>
                 <div>
                     <img src="" alt="">
-                    <p>Designed for air rejuvenation</p>
-                </div>
-                <div>
-                    <img src="" alt="">
-                    <p>Perfect for every room in tall types of places.</p>
-                </div>
-            </div>        
-    </div>
+                        <p>Designed for air rejuvenation</p>
+                    </div>
+                    <div>
+                        <img src="" alt="">
+                        <p>Perfect for every room in tall types of places.</p>
+                    </div>
+                </div>        
+    </section>
 </section>
