--- a/src/app/shared/components/body/body.component.scss
+++ b/src/app/shared/components/body/body.component.scss
@@ -75,55 +75,72 @@
         }
     }
 }
-
-.main2 {
+.section__conteiner {
     display: flex;
-    padding-top: 10px;
-    &__div {
+    .leftColumn {
         display: flex;
-        flex-direction: column;
-        align-items: center;
-        &-img {
-            width: 500px;
-            height: 591;
-            padding-top: 40px;
-            padding-left: 40px;
-            border-radius: 10px;
-        }
-        &-img2 {
-            width: 48px;
-            height: 48px;
-            border-radius: 100px;
-            padding: 0 10px;
-        }
-        &-img3 {
-            width: 176px;
-            height: 35.3px;
-            padding: 0 10px;
-        }
-        &-text {
-            width: 527px;
-            height: 72px;
-            font-size: 16px;
-            font-weight: 400;
-            line-height: 24px;
-        }
-    }
-    &__div1 {
-        &-center{
+        &__img{
             display: flex;
+            flex-direction: column;
+            align-items: center;
+            &-clarifion {
+                width: 500px;
+                height: 591;
+                padding-top: 40px;
+                padding-left: 40px;
+                border-radius: 10px;
+            }
+            &-photo {
+                width: 48px;
+                height: 48px;
+                border-radius: 100px;
+                padding: 0 10px;
+            }
+            &-stars {
+                width: 176px;
+                height: 35.3px;
+                padding: 0 10px;
+            }
             &-text {
-                padding-top: 45px;
-                width: 450px;
-                height: 113px;
+                width: 527px;
+                height: 72px;
+                font-size: 16px;
                 font-weight: 400;
+                line-height: 24px;
             }
         }
-        &-img {
-            width: 134px;
-            height: 134px;
-            padding-top: 0.5px;
-            border-radius: 10px;
+    }
+    
+    .rightColumn {
+        padding-left: 20px;
+        &__text {
+                &-primary {
+                    padding-top: 45px;
+                    width: 450px;
+                    height: 113px;
+                    font-weight: 400;
+                }
+                &-secundary {
+                    display: flex;
+                    align-items: baseline;
+                    &-icon {
+                        width: 10px;
+                        height: 10px;
+                        padding: 0 5px;
+                    }
+                }
+            }
+            &__products {
+                display: flex;
+                gap: 10px;
+                &-img {
+                    width: 134px;
+                    height: 134px;
+                    padding-top: 0.5px;
+                    border-radius: 10px;
+                    background-color:rgba(44, 126, 248, 1);
+                    border-radius: 10px;
+                }
+            }
         }
     }
-}
