terminando la vista general

--- a/src/app/shared/components/body/body.component.html
+++ b/src/app/shared/components/body/body.component.html
@@ -36,7 +36,7 @@
     <section class="leftColumn">
         <div class="leftColumn__img">
             <img src="assets/img.png" alt="imgcenter" class="leftColumn__img-clarifion">
-            <div>
+            <div class="leftColumn__img-conteiner">
                 <img src="assets/imgPhoto.png" alt="imgPhoto" class="leftColumn__img-photo">
                 <img src="assets/name.png" alt="imgName" class="leftColumn__img-stars">
             </div>
@@ -58,25 +58,37 @@
                 <img src="assets/imgEstrellas.png" alt="imgEstrellas">
                 <div class="rightColumn__text-secundary">
                     <img src="assets/imgRedondo.png" alt="imgPunto" class="rightColumn__text-secundary-icon">
-                    <p>12 left in Stock</p>
+                    <p class="rightColumn__text-paragraph">12 left in Stock</p>
                 </div>
-                <p>Simply plug a Clarifion into any standard outlet and replace bulky, expensive air purifiers with a simple.</p>
+                <p class="rightColumn__text-paragraph">Simply plug a Clarifion into any standard outlet and replace bulky, expensive air purifiers with a simple.</p>
             </div>
-          
         </div>
-            <div>
-                <div>
-                    <img src="" alt="">
-                    <p>Negative lon Technology may help with allergens</p>
+
+            <div class="rightColumn__Medium">
+                <div class="rightColumn__Medium-text">
+                    <img src="assets/imgtilde.png" alt="imgtilde" class="rightColumn__Medium-text-img">
+                    <p class="rightColumn__Medium-text-paragraph">Negative lon Technology may help with allergens</p>
                 </div>
-                <div>
-                    <img src="" alt="">
-                        <p>Designed for air rejuvenation</p>
+                <div class="rightColumn__Medium-text">
+                    <img src="assets/imgtilde.png" alt="imgtilde" class="rightColumn__Medium-text-img">
+                        <p class="rightColumn__Medium-text-paragraph">Designed for air rejuvenation</p>
                     </div>
-                    <div>
-                        <img src="" alt="">
-                        <p>Perfect for every room in tall types of places.</p>
+                    <div class="rightColumn__Medium-text">
+                        <img src="assets/imgtilde.png" alt="imgtilde" class="rightColumn__Medium-text-img">
+                        <p class="rightColumn__Medium-text-paragraph">Perfect for every room in tall types of places.</p>
                     </div>
-                </div>        
+                </div>    
+                <div class="rightColumn__desc">
+                    <img src="assets/imgcenter.png" alt="imgcenter" class="rightColumn__desc-img">
+                    <img src="assets/buton.png" alt="imgbuton" class="rightColumn__desc-img">
+                    <img src="assets/cards.png" alt="imgcards" class="rightColumn__desc-img">
+                </div>   
+                <div class="rightColumn__textRed">
+                    <img src="assets/textRed.png" alt="textRed">
+                </div> 
+                <div class="rightColumn__icon">
+                    <img src="assets/icon_guarantee.png" alt="imgIcon">
+                    <p class="rightColumn__icon-text">If you are not completely thrilled with your Clarifion - We have a 30 day satisfaction guarantee. Please refer to our return policy at the bottom of the page for more details. Happy Shopping!</p>
+                </div>
     </section>
 </section>
