--- a/src/app/shared/components/body/body.component.scss
+++ b/src/app/shared/components/body/body.component.scss
@@ -77,6 +77,8 @@
 }
 .section__conteiner {
     display: flex;
+    justify-content: center;
+    gap: 20px;
     .leftColumn {
         display: flex;
         &__img{
@@ -84,8 +86,8 @@
             flex-direction: column;
             align-items: center;
             &-clarifion {
-                width: 500px;
-                height: 591;
+                width: 575px;
+                height: 591px;
                 padding-top: 40px;
                 padding-left: 40px;
                 border-radius: 10px;
@@ -102,18 +104,30 @@
                 padding: 0 10px;
             }
             &-text {
-                width: 527px;
+                width: 450px;
                 height: 72px;
                 font-size: 16px;
                 font-weight: 400;
                 line-height: 24px;
+                padding: 20px;
+                text-align: justify;
+            }
+            &-conteiner {
+                margin-right: 200px;
+                margin-top: 20px;
             }
         }
     }
     
     .rightColumn {
         padding-left: 20px;
+        width: 550px;
         &__text {
+            &-paragraph {
+                width: 398px;
+                height: 34px;
+                font-size: 16px;
+            }
                 &-primary {
                     padding-top: 45px;
                     width: 450px;
@@ -133,6 +147,7 @@
             &__products {
                 display: flex;
                 gap: 10px;
+                padding-top: 20px;
                 &-img {
                     width: 134px;
                     height: 134px;
@@ -140,6 +155,46 @@
                     border-radius: 10px;
                     background-color:rgba(44, 126, 248, 1);
                     border-radius: 10px;
+                }
+            }
+            &__Medium {
+                &-text {
+                    display: flex;
+                    align-items: center;
+                    padding-top: 15px;
+                    font-size: 16px;
+                    height: 22px;
+                    &-img {
+                        width: 22px;
+                        height: 22px;
+                        padding: 0 10px;
+                    }
+                    &-paragraph {
+                        margin: 0 !important;
+                        font-family: Manrope;
+                    }
+                }
+            }
+            &__desc {
+                display: flex;
+                justify-content: center;
+                flex-direction: column;
+                padding-top: 20px;
+                &-img {
+                    padding-top: 15px;
+                }
+            }
+            &__textRed {
+                display: flex;
+                justify-content: center;
+                margin-top: 20px;
+                padding: 20px;
+            }
+            &__icon {
+                display: flex;
+                align-items: center;
+                &-text {
+                    padding-left: 10px;
                 }
             }
         }
