--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -1,10 +1,10 @@
 .footer {
     background-color: #252F3D;
-    width: 1097px;
-    height: 50px;
+    height: 88px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    margin-top: 50px;
     &__container {
         display: flex;
         &-img {
@@ -21,7 +21,7 @@
         height: 12px;
         font-weight: 400;
         font-family: Manrope;
-        font-size: 14px;
+        font-size: 16px;
         line-height: 24px;
         color: white;
     }
