--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
-
-html {
+@import url('https://fonts.googleapis.com/css2?family=Manrope&family=Roboto&display=swap');
+* {
   margin: 0;
   padding: 0;
 }
 
 body {
   margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: 'Manrope', sans-serif;
 }
