modificando vista mobile

--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -34,3 +34,29 @@
     }
   }
 }
+
+@media (min-width: 300px) {
+
+}
+
+
+@media (min-width: 768px) {
+.nabvarResponsiive {
+  display: none;
+}
+}
+
+@media (max-width: 768px) {
+  .nabvar {
+    display: none;
+  }
+  .nabvarResponsiive {
+    background-color: #252F3D;
+    height: 50px;
+  }
+
+  .carousel-item {
+    width: 257px;
+    height: 22px;
+  }
+}
