--- a/src/app/shared/components/body/body.component.html
+++ b/src/app/shared/components/body/body.component.html
@@ -16,19 +16,19 @@
 <section class="step">
     <div class="step__center">
         <img src="assets/icono1.png" alt="ImagenIcono" class="step__center-icono">
-        <p class="step__center-textReview">Step 1: Cart Review</p>
+        <p class="step__center-textReview"> <span class="step__center-text">Step 1:</span> Cart Review</p>
     </div>
     <div class="step__center">
         <img src="assets/icono1.png" alt="ImagenIcono" class="step__center-icono">
-        <p class="step__center-textCheckout">Step 2: Checkout</p>
+        <p class="step__center-textCheckout"> <span class="step__center-text">Step 2:</span> Checkout</p>
     </div>
     <div class="step__center">
         <img src="assets/icono2.png" alt="ImagenIcono" class="step__center-icono">
-        <p class="step__center-textSpecial">Step 3: Special Offer</p>
+        <p class="step__center-textSpecial"><span class="step__center-text">Step 3:</span> Special Offer</p>
     </div>
     <div class="step__center">
         <img src="assets/icono3.png" alt="ImagenIcono" class="step__center-icono">
-        <p class="step__center-textConfirmation">Step 4: Confirmation</p>
+        <p class="step__center-textConfirmation"><span class="step__center-text">Step 4:</span> Confirmation</p>
     </div>
 </section>
 
