--- a/src/app/shared/components/body/body.component.scss
+++ b/src/app/shared/components/body/body.component.scss
@@ -7,12 +7,11 @@
         &-clarifion {
             width: 192px;
             height: 36px;
-            padding: 5px;
         }
         &-mcafee {
             width: 88px;
             height: 32px;
-            padding: 0 30px;
+            margin: 0 10px;
         }
         &-norton {
             width: 82px;
@@ -44,8 +43,6 @@
         justify-content: center;
         align-items: center;
         &-icono {
-         width: 40px;
-         height: 40px; 
          padding: 0 10px;     
         }
         &-textReview{
@@ -96,7 +93,6 @@
                 width: 48px;
                 height: 48px;
                 border-radius: 100px;
-                padding: 0 10px;
             }
             &-stars {
                 width: 176px;
@@ -161,7 +157,7 @@
                 &-text {
                     display: flex;
                     align-items: center;
-                    padding-top: 15px;
+                    margin-top: 15px;
                     font-size: 16px;
                     height: 22px;
                     &-img {
@@ -181,7 +177,9 @@
                 flex-direction: column;
                 padding-top: 20px;
                 &-img {
-                    padding-top: 15px;
+                    margin-top: 15px;
+                    width: 524px;
+                    height: 56px;
                 }
             }
             &__textRed {
@@ -189,6 +187,7 @@
                 justify-content: center;
                 margin-top: 20px;
                 padding: 20px;
+                width: 524px;
             }
             &__icon {
                 display: flex;
@@ -199,3 +198,100 @@
             }
         }
     }
+
+    @media (max-width: 768px) {
+        .marks {
+            &__primary {
+                &-clarifion {
+                    width: 106.67px;
+                    height: 20px;
+                }
+                &-mcafee {
+                }
+            }
+            &__text {
+                text-align: center;
+            }
+        }
+
+        .step {
+            width: 320px;
+            height: 37px;
+            justify-content: space-between;
+            &__center {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                text-align: center;
+                &-text {
+                    display: none;
+                }
+                &-icono {
+                 width: 40px;
+                 height: 40px;     
+                }
+                &-textReview{
+                    width: 55px;
+                    height: 9px;
+                    font-weight: 400;
+                    line-height: 13.2px;
+                    font-size: 12px;
+        
+                }
+                &-textCheckout {
+                    width: 55px;
+                    height: 9px;
+                    font-weight: 400;
+                    line-height: 13.2px;
+                }
+                &-textSpecial{
+                    font-weight: 700;
+                    width: 75px;
+                    height: 9px;
+                    line-height: 13.2px;
+                } 
+                &-textConfirmation {
+                    width: 74px;
+                    height: 9px;
+                    font-weight: 400;
+                    line-height: 13.2px;
+                }
+            }
+        }
+
+        .rightColumn{
+           &__text {
+            text-align: center;
+            &-primary {
+                width: 320px !important;
+                height: 85px !important;
+                padding: 0 !important;
+                margin-top: 40px !important;
+            }
+           }
+           &__products {
+            width: 320px;
+            height: 122px;
+            &-img {
+                width: 80px;
+                height: 80px;
+            }
+           }
+        }
+
+        .section__conteiner {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            .leftColumn {
+                display: none;  
+                &__img {
+                    &-clarifion {
+                        
+                    }
+                }              
+            }
+        }
+    }
+    
