--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -16,3 +16,28 @@
         <a href="" class="nabvar__item-links">100% MONEY BACK GUARANTEE </a>
     </div>
   </header>
+
+  <div id="carouselExampleControls" class="carousel slide nabvarResponsiive" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active text-center">
+        <img src="assets/navbarSatisfaction.png" class="d-block mx-auto w-100 carousel-item-img" alt="ImgCarousel">
+      </div>
+      <div class="carousel-item text-center">
+        <img src="assets/nabvar.png" class="d-block mx-auto w-100 carousel-item-img" alt="ImgCarousel"> 
+      </div>
+      <div class="carousel-item">
+        <img src="assets/nabvar.png" class="d-block mx-auto w-100 carousel-item-img" alt="ImgCarousel">
+      </div>
+      <div class="carousel-item">
+        <img src="assets/nabvar.png" class="d-block mx-auto w-100 carousel-item-img" alt="ImgCarousel">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
