terminando la vista mobile

--- a/src/app/shared/components/body/body.component.html
+++ b/src/app/shared/components/body/body.component.html
@@ -51,17 +51,20 @@
 
         <div class="rightColumn__products">
             <div class="rightColumn__products-img">
-                  <img src="assets/img main2.png" alt="imgCenter">
+                  <img src="assets/img main2.png" alt="imgCenter" class="rightColumn__products-img-conteiner">
             </div>
             <div class="rightColumn__text">
-                <img src="assets/imgprecio.png" alt="imgprice">
-                <img src="assets/imgEstrellas.png" alt="imgEstrellas">
+                <img src="assets/imgprecio.png" alt="imgprice" class="rightColumn__text-img-price">
+                <img src="assets/imgEstrellas.png" alt="imgEstrellas" class="rightColumn__text-star">
                 <div class="rightColumn__text-secundary">
                     <img src="assets/imgRedondo.png" alt="imgPunto" class="rightColumn__text-secundary-icon">
-                    <p class="rightColumn__text-paragraph">12 left in Stock</p>
+                    <p class="rightColumn__text-paragraph-stock">12 left in Stock</p>
                 </div>
                 <p class="rightColumn__text-paragraph">Simply plug a Clarifion into any standard outlet and replace bulky, expensive air purifiers with a simple.</p>
             </div>
+        </div>
+        <div class="rightColumn__imgMobile">
+            <p>Simply plug a Clarifion into any standard outlet and replace bulky, expensive air purifiers with a simple.</p>
         </div>
 
             <div class="rightColumn__Medium">
@@ -81,13 +84,14 @@
                 <div class="rightColumn__desc">
                     <img src="assets/imgcenter.png" alt="imgcenter" class="rightColumn__desc-img">
                     <img src="assets/buton.png" alt="imgbuton" class="rightColumn__desc-img">
-                    <img src="assets/cards.png" alt="imgcards" class="rightColumn__desc-img">
+                    <img src="assets/cards.png" alt="imgcards" class="rightColumn__desc-img-desktop">
+                    <img src="assets/descuentoRight.png" alt="imgmobile" class="rightColumn__desc-mobile">
                 </div>   
                 <div class="rightColumn__textRed">
-                    <img src="assets/textRed.png" alt="textRed">
+                    <img src="assets/textRed.png" alt="textRed" class="rightColumn__textRed-img">
                 </div> 
                 <div class="rightColumn__icon">
-                    <img src="assets/icon_guarantee.png" alt="imgIcon">
+                    <img src="assets/icon_guarantee.png" alt="imgIcon" class="rightColumn__icon-img">
                     <p class="rightColumn__icon-text">If you are not completely thrilled with your Clarifion - We have a 30 day satisfaction guarantee. Please refer to our return policy at the bottom of the page for more details. Happy Shopping!</p>
                 </div>
     </section>
